<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <RelativeLayout
        android:layout_width="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_margin="10dp"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_10dp"
            android:text="@string/title"
            android:textSize="@dimen/_20sp"
            android:layout_marginTop="@dimen/_30dp"
            android:fontFamily="@font/roboto_medium"
            android:id="@+id/tv_first"
            android:textColor="@color/black"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edt_login_back"
            android:layout_below="@id/tv_first"
            android:singleLine="true"
            android:inputType="textPersonName"
            android:paddingHorizontal="@dimen/_10dp"
            android:paddingVertical="@dimen/_15dp"
            android:hint="@string/title"
            android:id="@+id/edt_title"
            android:layout_marginTop="@dimen/_10dp"
            android:paddingStart="@dimen/_20dp"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_10dp"
            android:text="@string/question_type"
            android:layout_below="@+id/edt_title"
            android:textSize="@dimen/_20sp"
            android:layout_marginTop="@dimen/_30dp"
            android:fontFamily="@font/roboto_medium"
            android:id="@+id/user_type"
            android:textColor="@color/black"/>

        <androidx.appcompat.widget.AppCompatSpinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edt_login_back"
            android:padding="@dimen/_15dp"
            android:id="@+id/spn_type"
            android:layout_marginHorizontal="@dimen/_10dp"
            android:layout_below="@+id/user_type"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_10dp"
            android:text="@string/banner"
            android:layout_below="@+id/spn_type"
            android:textSize="@dimen/_20sp"
            android:layout_marginTop="@dimen/_30dp"
            android:fontFamily="@font/roboto_medium"
            android:id="@+id/banner"
            android:textColor="@color/black"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="@dimen/_10dp"
            android:text="@string/upload_banner"
            android:textAllCaps="false"
            android:background="@drawable/btn_primary"
            android:id="@+id/btn_banner"
            android:layout_below="@+id/banner"
            android:layout_marginBottom="@dimen/_10dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_10dp"
            android:text="@string/pdf"
            android:layout_below="@+id/btn_banner"
            android:textSize="@dimen/_20sp"
            android:layout_marginTop="@dimen/_30dp"
            android:fontFamily="@font/roboto_medium"
            android:id="@+id/pdf"
            android:textColor="@color/black"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="@dimen/_10dp"
            android:text="@string/upload_banner"
            android:textAllCaps="false"
            android:background="@drawable/btn_primary"
            android:id="@+id/btn_pdf"
            android:layout_below="@+id/pdf"
            android:layout_marginBottom="@dimen/_10dp"/>


        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="@dimen/_10dp"
            android:text="@string/upload"
            android:textAllCaps="false"
            android:background="@drawable/btn_primary"
            android:id="@+id/btn_upload"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="@dimen/_10dp"/>
        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:visibility="gone"
            android:layout_centerHorizontal="true"
            android:id="@+id/progress"/>
    </RelativeLayout>
</layout>