<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/black"
            android:text="@string/update"
            android:textColor="@color/white"
            android:textAlignment="center"
            android:visibility="gone"
            android:padding="@dimen/_15dp"
            android:textSize="@dimen/_20sp"
            android:id="@+id/tv_update"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:fontFamily="@font/raleway_semibold"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_10dp"
            android:text="@string/name"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_update"
            android:textSize="@dimen/_20sp"
            android:layout_marginTop="@dimen/_30dp"
            android:fontFamily="@font/roboto_medium"
            android:id="@+id/tv_first"
            android:textColor="@color/black"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edt_login_back"
            android:padding="@dimen/_15dp"
            android:id="@+id/name"
            android:inputType="textPersonName"
            android:layout_marginHorizontal="@dimen/_10dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_first"
            app:layout_constraintLeft_toLeftOf="parent"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_10dp"
            android:text="@string/email"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/name"
            android:textSize="@dimen/_20sp"

            android:layout_marginTop="@dimen/_30dp"
            android:fontFamily="@font/roboto_medium"
            android:id="@+id/tv_last"
            android:textColor="@color/black"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edt_login_back"
            android:padding="@dimen/_15dp"
            android:inputType="textEmailAddress"
            android:id="@+id/edt_email"
            android:layout_marginHorizontal="@dimen/_10dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_last"
            app:layout_constraintLeft_toLeftOf="parent"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_10dp"
            android:text="@string/password"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edt_email"
            android:textSize="@dimen/_20sp"
            android:layout_marginTop="@dimen/_30dp"
            android:fontFamily="@font/roboto_medium"
            android:id="@+id/password"
            android:textColor="@color/black"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edt_login_back"
            android:padding="@dimen/_15dp"
            android:inputType="textPassword"
            android:id="@+id/edt_password"
            android:layout_marginHorizontal="@dimen/_10dp"
            app:layout_constraintTop_toBottomOf="@+id/password"
            app:layout_constraintLeft_toLeftOf="parent"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_10dp"
            android:text="@string/user_type"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edt_password"
            android:textSize="@dimen/_20sp"
            android:layout_marginTop="@dimen/_30dp"
            android:fontFamily="@font/roboto_medium"
            android:id="@+id/user_type"
            android:textColor="@color/black"/>

        <androidx.appcompat.widget.AppCompatSpinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edt_login_back"
            android:padding="@dimen/_15dp"
            android:id="@+id/spn_type"

            android:layout_marginHorizontal="@dimen/_10dp"
            app:layout_constraintTop_toBottomOf="@+id/user_type"
            app:layout_constraintLeft_toLeftOf="parent"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_10dp"
            android:text="@string/register"
            android:background="@drawable/btn_primary"
            android:id="@+id/btn_register"
            app:layout_constraintTop_toBottomOf="@+id/spn_type"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="@dimen/_10dp"
            android:paddingVertical="@dimen/_15dp"/>
        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/btn_register"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:visibility="gone"
            android:id="@+id/progress"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>