<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <RelativeLayout
        android:layout_width="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_margin="10dp"
        android:layout_height="match_parent">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_heading"
            android:layout_marginTop="@dimen/_10dp"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:fontFamily="@font/roboto_bold"
            android:id="@+id/tv_heading"
            android:paddingStart="@dimen/_20dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_10dp"
            android:text="@string/email"
            android:layout_below="@+id/tv_heading"
            android:textSize="@dimen/_20sp"
            android:layout_marginTop="@dimen/_30dp"
            android:fontFamily="@font/roboto_medium"
            android:id="@+id/tv_first"
            android:textColor="@color/black"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edt_login_back"
            android:layout_below="@id/tv_first"
            android:maxLength="10"
            android:singleLine="true"
            android:inputType="textEmailAddress"
            android:paddingHorizontal="@dimen/_10dp"
            android:paddingVertical="@dimen/_15dp"
            android:hint="@string/email"
            android:id="@+id/edt_email"
            android:layout_marginTop="@dimen/_10dp"
            android:paddingStart="@dimen/_20dp"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_10dp"
            android:text="@string/password"
            android:layout_below="@+id/edt_email"
            android:textSize="@dimen/_20sp"
            android:layout_marginTop="@dimen/_30dp"
            android:fontFamily="@font/roboto_medium"
            android:id="@+id/tv_first2"
            android:textColor="@color/black"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edt_login_back"
            android:layout_below="@id/tv_first2"
            android:maxLength="10"
            android:singleLine="true"
            android:inputType="textPassword"
            android:paddingHorizontal="@dimen/_10dp"
            android:paddingVertical="@dimen/_15dp"
            android:hint="@string/password"
            android:id="@+id/edt_password"
            android:layout_marginTop="@dimen/_10dp"
            android:paddingStart="@dimen/_20dp"/>




        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="@dimen/_10dp"
            android:text="@string/login"
            android:textAllCaps="false"
            android:background="@drawable/btn_primary"
            android:id="@+id/btn_login"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="@dimen/_10dp"/>
        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:visibility="gone"
            android:layout_centerHorizontal="true"
            android:id="@+id/progress"/>
    </RelativeLayout>
</layout>