<?xml version="1.0" encoding="utf-8"?>
<layout>
    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_10dp"
                    android:text="@string/name"
                    android:layout_weight="1"
                    android:textSize="@dimen/_20sp"
                    android:layout_marginTop="@dimen/_30dp"
                    android:fontFamily="@font/roboto_medium"
                    android:id="@+id/tv_first"
                    android:textColor="@color/black"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginHorizontal="@dimen/_10dp"
                    android:text="@string/name"
                    android:textSize="@dimen/_20sp"
                    android:layout_marginTop="@dimen/_30dp"
                    android:fontFamily="@font/roboto_medium"
                    android:id="@+id/tv_name"
                    android:textColor="@color/black"/>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_10dp"
                    android:text="@string/email"
                    android:layout_weight="1"
                    android:textSize="@dimen/_20sp"
                    android:layout_marginTop="@dimen/_30dp"
                    android:fontFamily="@font/roboto_medium"
                    android:textColor="@color/black"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginHorizontal="@dimen/_10dp"
                    android:text="@string/name"
                    android:textSize="@dimen/_20sp"
                    android:layout_marginTop="@dimen/_30dp"
                    android:fontFamily="@font/roboto_medium"
                    android:id="@+id/tv_email"
                    android:textColor="@color/black"/>

            </LinearLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_10dp"
                android:text="@string/question"
                android:background="@drawable/btn_primary"
                android:id="@+id/btn_question"
                android:layout_marginTop="@dimen/_10dp"
                android:paddingVertical="@dimen/_15dp"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_10dp"
                android:text="@string/logout"
                android:background="@drawable/btn_logout"
                android:id="@+id/btn_logout"
                android:layout_marginTop="@dimen/_10dp"
                android:paddingVertical="@dimen/_15dp"/>

        </LinearLayout>
    </RelativeLayout>
</layout>